# pllum-function-calling-impl

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: instruction.md
notebooks/: create_translated_dataset.ipynb  dataset_exploration.ipynb  fine_tuning.ipynb  test_model.ipynb  translation_test.ipynb
src/: auth.py  dataset.py  fine_tuning.py  translation_dataset.py  translator.py
