[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pllum-function-calling"
version = "0.1.0"
description = "Tools for analyzing the Salesforce/xlam-function-calling-60k dataset"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.17.0",
    "huggingface-hub>=0.21.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "ipykernel>=6.0.0",
    "notebook>=7.0.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest>=7.4.0",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88
